--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<div class="container">
 			<nav>
 				<!-- logo link -->
-				<h1>J D 🔱</h1>
+				<h1 class="logo1">J D 🔱</h1>
 				<ul class="navigation">
 					<li>
 						<a
@@ -97,7 +97,7 @@
 					loading="lazy"
 					class="hero-img" />
 				<div class="bio animate__animated animate__shakeX">
-					<h2 class="bio-title">About Me</h2>
+					<h2 class="bio-title">Professional Profile</h2>
 					<p class="bio-text">
 						Front-end engineer, committed to growth and learning, with a desire
 						to contribute to a larger development team. <br />
@@ -121,10 +121,13 @@
 			<section class="more-about">
 				<h2>More About Me</h2>
 				<p>
-					The funny thing is that I spent over 13 years in Ukraine, which is
-					half of my adult life, before I learned about front end development.
-					Life there was great until February 24, 2022, when war broke out
-					there.
+					The funny thing is that I spent over 13 years in Ukraine, I have six
+					years of sales management experience in the financial sector,
+					including blockchain, banking, cryptocurrencies, digital marketing and
+					areas of sales interest.
+					<br />
+					During this time, before I learned about front end development. Life
+					there was great until February 24, 2022, when war broke out there.
 					<br />
 					I had to flee and leave everything I knew behind. It took me some time
 					to start coming to terms with the situation because I lost so much
@@ -137,16 +140,77 @@
 					While I was still trying to understand web development, I met an
 					amazing person along the way who turned out to be my partner and who
 					was also a senior software engineer.<br />
+
 					I began my transition around the middle of the year 2022. During this
 					time, I watched certified paid courses from udemy and a number of
 					other sources, including MDN, and I also taught myself how to code. It
 					wasn't simple at first, but finally I was able to finish web
-					development since I kept reading and responding to so much stuff.
+					development, since I kept learning and coding. <br />
+
+					I enjoy leveraging my skills of HTML, CSS, and JavaScript along with
+					modern libraries and frameworks to build and manage responsive
+					websites. <br />
+
+					Dedicated to learning and professional development, eager to use
+					skills on a larger development team, and eager to take on more
+					challenging issues while continuing to look for ways to increase user
+					effectiveness.
 				</p>
 			</section>
 		</div>
+		<!-- skills -->
 
 		<!-- footer -->
+		<section
+			class="skills"
+			id="skills">
+			<h2 class="skill-header">My Top Skills</h2>
+
+			<div class="skills-wrapper">
+				<div class="first-set animate__animated animate__pulse">
+					<img
+						src="icons/icons8-html-5.svg"
+						alt=""
+						loading="lazy"
+						class="icon icon-card" />
+					<img
+						src="icons/icons8-css3.svg"
+						alt=""
+						loading="lazy"
+						class="icon icon-card" />
+					<img
+						src="icons/icons8-javascript.svg"
+						alt=""
+						loading="lazy"
+						class="icon icon-card" />
+				</div>
+
+				<div class="second-set animate__animated animate__pulse">
+					<img
+						src="assets/icons/icons8-bootstrap.svg"
+						alt=""
+						loading="lazy"
+						class="icon icon-card" />
+					<img
+						src="assets/icons/icons8-react-native.svg"
+						alt=""
+						loading="lazy"
+						class="icon icon-card" />
+					<img
+						src="assets/icons/icons8-git.svg"
+						alt=""
+						loading="lazy"
+						class="icon icon-card" />
+				</div>
+			</div>
+		</section>
+
+		<!-- project section -->
+		<section
+			class="projects"
+			id="projects">
+			<h2 class="projects-title">Some of my Recent Projects</h2>
+		</section>
 
 		<!-- linking script.js -->
 		<script src="script.js/script.js"></script>
