My-profile-starter

--- a/starter/index.html
+++ b/starter/index.html
@@ -209,7 +209,18 @@
 		<section
 			class="projects"
 			id="projects">
+			<!-- project styling -->
 			<h2 class="projects-title">Some of my Recent Projects</h2>
+			<div class="projects-container">
+				<div class="project-container project-card">
+					<!-- list of projects -->
+					<img
+						src="#"
+						alt="expense-tracker"
+						loading="lazy"
+						class="project-pic" />
+				</div>
+			</div>
 		</section>
 
 		<!-- linking script.js -->
