My profile Starter

--- a/starter/index.html
+++ b/starter/index.html
@@ -215,10 +215,12 @@
 				<div class="project-container project-card">
 					<!-- list of projects -->
 					<img
-						src="#"
-						alt="expense-tracker"
+						src="images/uhost.png"
+						alt="uhost"
 						loading="lazy"
 						class="project-pic" />
+					<h3 class="project-title">uhost</h3>
+					<p class="project-details"></p>
 				</div>
 			</div>
 		</section>
