--- a/starter/index.html
+++ b/starter/index.html
@@ -219,9 +219,28 @@
 						alt="uhost"
 						loading="lazy"
 						class="project-pic" />
-					<h3 class="project-title">uhost</h3>
-					<p class="project-details"></p>
-				</div>
+					<h3 class="project-title">Uhost</h3>
+					<p class="project-details">
+						uhost is a hosting website, where users can choose a data plan!
+						<br />
+						was created styled with html, css and javascript to make it more
+						responsive.
+						<a
+							href="images/uhost.png"
+							target="_blank"
+							class="project-link"
+							>Check it Out</a
+						>
+					</p>
+					<div class="project-container project-card">
+						<div class="project-container project-card">
+          <img
+            src="images/dietnutri.png"
+            alt="dietnutri"
+            loading="lazy"
+            class="project-pic"
+          />
+             </div>
 			</div>
 		</section>
 
