--- a/starter/index.html
+++ b/starter/index.html
@@ -214,6 +214,8 @@
 			<div class="projects-container">
 				<div class="project-container project-card">
 					<!-- list of projects -->
+
+					<!-- project uhost -->
 					<img
 						src="images/uhost.png"
 						alt="uhost"
@@ -232,15 +234,15 @@
 							>Check it Out</a
 						>
 					</p>
+					<!-- project  dietnutri-->
 					<div class="project-container project-card">
-						<div class="project-container project-card">
-          <img
-            src="images/dietnutri.png"
-            alt="dietnutri"
-            loading="lazy"
-            class="project-pic"
-          />
-             </div>
+						<img
+							src="images/dietnutri.png"
+							alt="dietnutri"
+							loading="lazy"
+							class="project-pic" />
+					</div>
+				</div>
 			</div>
 		</section>
 
