--- a/starter/index.html
+++ b/starter/index.html
@@ -92,7 +92,8 @@
 				class="hero"
 				id="about">
 				<img
-					src="images/jane2.png"
+					id="imgstyle"
+					src="images/jane 6.png"
 					alt="jane-duru"
 					loading="lazy"
 					class="hero-img" />
@@ -154,7 +155,9 @@
 					Dedicated to learning and professional development, eager to use
 					skills on a larger development team, and eager to take on more
 					challenging issues while continuing to look for ways to increase user
-					effectiveness.
+					effectiveness. lastly i enjoy spending my free time making beats.
+
+					<a href="https://janeezy.beatstars.com">Check it out </a>
 				</p>
 			</section>
 		</div>
@@ -228,19 +231,90 @@
 						was created styled with html, css and javascript to make it more
 						responsive.
 						<a
-							href="images/uhost.png"
+							href="https://uhost-plan.netlify.app/index.html"
 							target="_blank"
 							class="project-link"
 							>Check it Out</a
 						>
 					</p>
+
 					<!-- project  dietnutri-->
+					<h3 class="project-title">dietnutri</h3>
+
 					<div class="project-container project-card">
 						<img
 							src="images/dietnutri.png"
 							alt="dietnutri"
 							loading="lazy"
 							class="project-pic" />
+						<p class="project-details">
+							Dietnurti is about how to track your dietary, I built this site is
+							still on demo, but yes you can have list of dietary options if
+							your into healthy habits!
+						</p>
+						<a
+							href="https://diet-nutri.netlify.app"
+							target="_blank"
+							class="project-link"
+							>Check it Out</a
+						>
+					</div>
+					<div class="project-container project-card">
+						<img
+							src="images/Bankist.png"
+							alt="Bankist"
+							loading="lazy"
+							class="project-pic" />
+						<h3 class="project-title">Bankist</h3>
+						<p class="project-details">
+							Bankist is a minimalist app I developed to keep track of your
+							financial spending!
+						</p>
+						<a
+							href="https://bankist.netlify.app"
+							target="_blank"
+							class="project-link"
+							>Check it Out</a
+						>
+					</div>
+					<div class="project-container project-card">
+						<img
+							src="images/PigGame.png"
+							alt="PigGame"
+							loading="lazy"
+							class="project-pic" />
+						<h3 class="project-title">Pig game</h3>
+						<p class="project-details">
+							Pig game is a demo web gamer, where there are multiple players the
+							dice needs to be rolled and each number rolled can be held if not
+							will rest to zero.
+						</p>
+						<a
+							href="https://pig-game-v2.netlify.app"
+							target="_blank"
+							class="project-link"
+							>Check it Out</a
+						>
+					</div>
+					<div class="project-container project-card">
+						<img
+							src="images/janeezybeats.png"
+							alt="janeezybeats"
+							loading="lazy"
+							class="project-pic" />
+						<h3 class="project-title">Janeezybeats</h3>
+						<p class="project-details">
+							Janeezy Beats gives the polished feel of the big production houses
+							houses. With an epic collection that spans multiple styles and
+							genres is still in the demo phase, but yes, I have been trying to
+							build my beat website.
+						</p>
+						<a
+							href="#"
+							target="_blank"
+							class="project-link"
+							>Check it Out</a
+						>
 					</div>
 				</div>
 			</div>
