adding js implementations
Adding more implementations

--- a/starter/index.html
+++ b/starter/index.html
@@ -92,7 +92,7 @@
 				class="hero"
 				id="about">
 				<img
-					src="images/jane 6.png"
+					src="images/jane2.png"
 					alt="jane-duru"
 					loading="lazy"
 					class="hero-img" />
