styling social media and footer
styling footer section

--- a/starter/index.html
+++ b/starter/index.html
@@ -162,7 +162,7 @@
 		</div>
 		<!-- skills -->
 
-		<!-- footer -->
+		<!-- body section -->
 		<section
 			class="skills"
 			id="skills">
@@ -207,38 +207,40 @@
 			</div>
 		</section>
 
-		<!-- project section -->
+		<!--  body project section -->
 		<section
 			class="projects"
 			id="projects">
 			<!-- project styling -->
 			<h2 class="projects-title">Some of my Recent Projects</h2>
 			<div class="projects-container">
+				<!-- list of projects -->
+
+				<!-- project uhost -->
 				<div class="project-container project-card">
-					<!-- list of projects -->
+					<div class="project-card">
+						<img
+							class="styling-image"
+							src="images/uhost.png"
+							alt="uhost"
+							loading="lazy"
+							class="project-pic" />
+						<h3 class="project-title">Uhost</h3>
+						<p class="project-details">
+							uhost is a hosting website, where users can choose a data plan!
+							<br />
+							was created styled with html, css and javascript to make it more
+							responsive.
+							<a
+								href="https://uhost-plan.netlify.app/index.html"
+								target="_blank"
+								class="project-link"
+								>Check it Out</a
+							>
+						</p>
+					</div>
 
-					<!-- project uhost -->
-					<img
-						class="styling-image"
-						src="images/uhost.png"
-						alt="uhost"
-						loading="lazy"
-						class="project-pic" />
-					<h3 class="project-title">Uhost</h3>
-					<p class="project-details">
-						uhost is a hosting website, where users can choose a data plan!
-						<br />
-						was created styled with html, css and javascript to make it more
-						responsive.
-						<a
-							href="https://uhost-plan.netlify.app/index.html"
-							target="_blank"
-							class="project-link"
-							>Check it Out</a
-						>
-					</p>
-
-					<!-- project  dietnutri-->
+					<!-- body  project  dietnutri-->
 
 					<div class="project-container project-card">
 						<img
@@ -255,6 +257,7 @@
 							still on demo, but yes you can have list of dietary options if
 							your into healthy habits!
 						</p>
+
 						<a
 							href="https://diet-nutri.netlify.app"
 							target="_blank"
@@ -326,7 +329,7 @@
 				</div>
 			</div>
 		</section>
-		<!-- contact me section  -->
+		<!-- body contact me section  -->
 		<section
 			class="contact"
 			id="contact">
@@ -377,6 +380,66 @@
 			</div>
 		</section>
 
+		<!--  body social media section  -->
+
+		<div class="socials">
+			<a
+				href="https://twitter.com/Iamjaneezy"
+				target="_blank"
+				><img
+					src="icons/icons8-twitter-circled.gif"
+					alt="Twitter"
+					loading="lazy"
+					class="socicon" />
+			</a>
+			<a
+				href="https://www.instagram.com/iam_janeezy/"
+				target="_blank"
+				><img
+					src="icons/icons8-instagram.gif"
+					alt="Instagram"
+					loading="lazy"
+					class="socicon"
+			/></a>
+
+			<a
+				href="https://www.linkedin.com/in/janeezy/"
+				target="_blank"
+				><img
+					src="icons/icons8-linkedin-circled.gif"
+					alt="Linkedin"
+					loading="lazy"
+					class="socicon"
+			/></a>
+			<a
+				href="https://github.com/janeezy"
+				target="_blank"
+				><img
+					src="icons/icons8-github.gif"
+					alt="Github"
+					class="socicon"
+			/></a>
+			<a
+				href="https://www.tiktok.com/@janeezybeats"
+				target="_blank">
+				<img
+					src="icons/tiktok-giphy.gif"
+					alt="Tiktok"
+					class="socicon"
+			/></a>
+		</div>
+		<!-- footer -->
+		<footer>
+			<p class="copy">&copy; Copyright 2023</p>
+			<p class="copy">
+				Built with ❤️ by
+				<a
+					href="https://twitter.com/Iamjaneezy"
+					target="_blank"
+					>Ezinne Adaego Jane Duru (Janeezy)</a
+				>
+			</p>
+		</footer>
 		<!-- linking script.js -->
 		<script src="script.js/script.js"></script>
 	</body>
