--- a/starter/index.html
+++ b/starter/index.html
@@ -38,7 +38,7 @@
 		<div class="container">
 			<nav>
 				<!-- logo link -->
-				<h1 class="logo1">JD🔱</h1>
+				<h1 class="logo1">JD</h1>
 				<ul class="navigation">
 					<li>
 						<a
@@ -427,6 +427,23 @@
 					alt="Tiktok"
 					class="socicon"
 			/></a>
+
+			<a
+				href="https://www.facebook.com/JaneezyOfficialBeats/"
+				target="_blank">
+				<img
+					src="icons/facebook.giphy.gif"
+					alt="facebook"
+					class="socicon"
+			/></a>
+			<a
+				href="https://www.youtube.com/channel/UCkN8kNA3kbahGI3zdHQ-l7Q"
+				target="_blank">
+				<img
+					src="icons/youtube-logo.gif"
+					alt="Youtube"
+					class="socicon"
+			/></a>
 		</div>
 		<!-- footer -->
 		<footer>
@@ -440,6 +457,16 @@
 				>
 			</p>
 		</footer>
+
+		<!-- footer continuation scroll up -->
+		<i
+			class="scroll-up"
+			id="scroll-up"
+			><img
+				src="icons/icons8-upward-arrow.gif"
+				class="socicon up-arrow"
+				alt="scroll-up"
+		/></i>
 		<!-- linking script.js -->
 		<script src="script.js/script.js"></script>
 	</body>
