--- a/starter/index.html
+++ b/starter/index.html
@@ -467,6 +467,9 @@
 				class="socicon up-arrow"
 				alt="scroll-up"
 		/></i>
+
+		<!-- creating responsesiveness -->
+
 		<!-- linking script.js -->
 		<script src="script.js/script.js"></script>
 	</body>
