adding media queries
more on responsiveness

--- a/starter/index.html
+++ b/starter/index.html
@@ -34,11 +34,20 @@
 			href="favicon_io/android-chrome-192x192.png"
 			type="image/x-icon" />
 	</head>
+	<!-- header -->
 	<body>
 		<div class="container">
+			<!-- navigation section -->
 			<nav>
 				<!-- logo link -->
-				<h1 class="logo1">JD</h1>
+				<h1 class="logo1">
+					JD
+					<link
+						id="logo-icon"
+						rel="shortcut icon"
+						href="favicon_io/favicon.ico"
+						type="image/x-icon" />
+				</h1>
 				<ul class="navigation">
 					<li>
 						<a
