--- a/starter/index.html
+++ b/starter/index.html
@@ -329,7 +329,7 @@
 							build my beat website.
 						</p>
 						<a
-							href="#"
+							href="https://janeezybeats.netlify.app"
 							target="_blank"
 							class="project-link"
 							>Check it Out</a
