made changes on html
updated html

--- a/index.html
+++ b/index.html
@@ -34,11 +34,20 @@
 			href="favicon_io/android-chrome-192x192.png"
 			type="image/x-icon" />
 	</head>
+	<!-- header -->
 	<body>
 		<div class="container">
+			<!-- navigation section -->
 			<nav>
 				<!-- logo link -->
-				<h1 class="logo1">J D 🔱</h1>
+				<h1 class="logo1">
+					JD
+					<link
+						id="logo-icon"
+						rel="shortcut icon"
+						href="favicon_io/favicon.ico"
+						type="image/x-icon" />
+				</h1>
 				<ul class="navigation">
 					<li>
 						<a
@@ -154,13 +163,15 @@
 					Dedicated to learning and professional development, eager to use
 					skills on a larger development team, and eager to take on more
 					challenging issues while continuing to look for ways to increase user
-					effectiveness.
+					effectiveness. lastly i enjoy spending my free time making beats.
+
+					<a href="https://janeezy.beatstars.com">Check it out </a>
 				</p>
 			</section>
 		</div>
 		<!-- skills -->
 
-		<!-- footer -->
+		<!-- body section -->
 		<section
 			class="skills"
 			id="skills">
@@ -205,12 +216,268 @@
 			</div>
 		</section>
 
-		<!-- project section -->
+		<!--  body project section -->
 		<section
 			class="projects"
 			id="projects">
+			<!-- project styling -->
 			<h2 class="projects-title">Some of my Recent Projects</h2>
+			<div class="projects-container">
+				<!-- list of projects -->
+
+				<!-- project uhost -->
+				<div class="project-container project-card">
+					<div class="project-card">
+						<img
+							class="styling-image"
+							src="images/uhost.png"
+							alt="uhost"
+							loading="lazy"
+							class="project-pic" />
+						<h3 class="project-title">Uhost</h3>
+						<p class="project-details">
+							uhost is a hosting website, where users can choose a data plan!
+							<br />
+							was created styled with html, css and javascript to make it more
+							responsive.
+							<a
+								href="https://uhost-plan.netlify.app/index.html"
+								target="_blank"
+								class="project-link"
+								>Check it Out</a
+							>
+						</p>
+					</div>
+
+					<!-- body  project  dietnutri-->
+
+					<div class="project-container project-card">
+						<img
+							class="styling-image"
+							src="images/dietnutri.png"
+							alt="dietnutri"
+							loading="lazy"
+							class="project-pic" />
+
+						<h3 class="project-title">dietnutri</h3>
+
+						<p class="project-details">
+							Dietnurti is about how to track your dietary, I built this site is
+							still on demo, but yes you can have list of dietary options if
+							your into healthy habits!
+						</p>
+
+						<a
+							href="https://diet-nutri.netlify.app"
+							target="_blank"
+							class="project-link"
+							>Check it Out</a
+						>
+					</div>
+					<div class="project-container project-card">
+						<img
+							class="styling-image"
+							src="images/Bankist.png"
+							alt="Bankist"
+							loading="lazy"
+							class="project-pic" />
+						<h3 class="project-title">Bankist</h3>
+
+						<p class="project-details">
+							Bankist is a minimalist app I developed to keep track of your
+							financial spending!
+						</p>
+						<a
+							href="https://bankist.netlify.app"
+							target="_blank"
+							class="project-link"
+							>Check it Out</a
+						>
+					</div>
+					<div class="project-container project-card">
+						<img
+							class="styling-image"
+							src="images/PigGame.png"
+							alt="PigGame"
+							loading="lazy"
+							class="project-pic" />
+						<h3 class="project-title">Pig game</h3>
+						<p class="project-details">
+							Pig game is a demo web gamer, where there are multiple players the
+							dice needs to be rolled and each number rolled can be held if not
+							will rest to zero.
+						</p>
+						<a
+							href="https://pig-game-v2.netlify.app"
+							target="_blank"
+							class="project-link"
+							>Check it Out</a
+						>
+					</div>
+					<div class="project-container project-card">
+						<img
+							class="styling-image"
+							src="images/janeezybeats.png"
+							alt="janeezybeats"
+							loading="lazy"
+							class="project-pic" />
+						<h3 class="project-title">Janeezybeats</h3>
+						<p class="project-details">
+							Janeezy Beats gives the polished feel of the big production houses
+							houses. With an epic collection that spans multiple styles and
+							genres is still in the demo phase, but yes, I have been trying to
+							build my beat website.
+						</p>
+						<a
+							href="https://janeezybeats.netlify.app"
+							target="_blank"
+							class="project-link"
+							>Check it Out</a
+						>
+					</div>
+				</div>
+			</div>
 		</section>
+		<!-- body contact me section  -->
+		<section
+			class="contact"
+			id="contact">
+			<h2>Get In Touch With Me</h2>
+			<div class="contact-form-container">
+				<div class="contact-form">
+					<form
+						action="https://formspree.io/f/xrgvpwbw"
+						method="POST">
+						<div class="form-control">
+							<label for="name">Name</label>
+							<input
+								type="text"
+								id="name"
+								name="sender-name"
+								placeholder="Enter Your Name"
+								class="input-field"
+								required />
+						</div>
+						<div class="form-control">
+							<label for="email">Email</label>
+							<input
+								type="email"
+								id="email"
+								name="sender-email"
+								placeholder="Enter Your Email"
+								class="input-field"
+								required />
+						</div>
+						<div class="form-control">
+							<label for="message">Message</label>
+							<textarea
+								id="message"
+								cols="60"
+								rows="10"
+								placeholder="Enter Your Message"
+								name="message"
+								class="input-field"
+								required></textarea>
+						</div>
+						<input
+							type="submit"
+							value="Submit"
+							id="submit-btn"
+							class="submit-btn" />
+					</form>
+				</div>
+			</div>
+		</section>
+
+		<!--  body social media section  -->
+
+		<div class="socials">
+			<a
+				href="https://twitter.com/Iamjaneezy"
+				target="_blank"
+				><img
+					src="icons/icons8-twitter-circled.gif"
+					alt="Twitter"
+					loading="lazy"
+					class="socicon" />
+			</a>
+			<a
+				href="https://www.instagram.com/iam_janeezy/"
+				target="_blank"
+				><img
+					src="icons/icons8-instagram.gif"
+					alt="Instagram"
+					loading="lazy"
+					class="socicon"
+			/></a>
+
+			<a
+				href="https://www.linkedin.com/in/janeezy/"
+				target="_blank"
+				><img
+					src="icons/icons8-linkedin-circled.gif"
+					alt="Linkedin"
+					loading="lazy"
+					class="socicon"
+			/></a>
+			<a
+				href="https://github.com/janeezy"
+				target="_blank"
+				><img
+					src="icons/icons8-github.gif"
+					alt="Github"
+					class="socicon"
+			/></a>
+			<a
+				href="https://www.tiktok.com/@janeezybeats"
+				target="_blank">
+				<img
+					src="icons/tiktok-giphy.gif"
+					alt="Tiktok"
+					class="socicon"
+			/></a>
+
+			<a
+				href="https://www.facebook.com/JaneezyOfficialBeats/"
+				target="_blank">
+				<img
+					src="icons/facebook.giphy.gif"
+					alt="facebook"
+					class="socicon"
+			/></a>
+			<a
+				href="https://www.youtube.com/channel/UCkN8kNA3kbahGI3zdHQ-l7Q"
+				target="_blank">
+				<img
+					src="icons/youtube-logo.gif"
+					alt="Youtube"
+					class="socicon"
+			/></a>
+		</div>
+		<!-- footer -->
+		<footer>
+			<p class="copy">&copy; Copyright 2023</p>
+			<p class="copy">
+				Built with ❤️ by
+				<a
+					href="https://twitter.com/Iamjaneezy"
+					target="_blank"
+					>Ezinne Adaego Jane Duru (Janeezy)</a
+				>
+			</p>
+		</footer>
+
+		<!-- footer continuation scroll up -->
+		<i
+			class="scroll-up"
+			id="scroll-up"
+			><img
+				src="icons/icons8-upward-arrow.gif"
+				class="socicon up-arrow"
+				alt="scroll-up"
+		/></i>
+
+		<!-- creating responsesiveness -->
 
 		<!-- linking script.js -->
 		<script src="script.js/script.js"></script>
