--- a/starter/index.html
+++ b/starter/index.html
@@ -40,14 +40,7 @@
 			<!-- navigation section -->
 			<nav>
 				<!-- logo link -->
-				<h1 class="logo1">
-					JD
-					<link
-						id="logo-icon"
-						rel="shortcut icon"
-						href="favicon_io/favicon.ico"
-						type="image/x-icon" />
-				</h1>
+				<h1 class="logo1">JD</h1>
 				<ul class="navigation">
 					<li>
 						<a
@@ -130,41 +123,34 @@
 			<section class="more-about">
 				<h2>More About Me</h2>
 				<p>
-					The funny thing is that I spent over 13 years in Ukraine, I have six
-					years of sales management experience in the financial sector,
-					including blockchain, banking, cryptocurrencies, digital marketing and
-					areas of sales interest.
-					<br />
-					During this time, before I learned about front end development. Life
-					there was great until February 24, 2022, when war broke out there.
-					<br />
-					I had to flee and leave everything I knew behind. It took me some time
-					to start coming to terms with the situation because I lost so much
-					during this time. <br />
-					I kept looking for sales jobs in Schengen nations, but I was unable to
-					locate any that paid more, I then turned to looking for other methods
-					to boost my income, and after doing some study, I discovered that I
-					could have been a developer much earlier.
-					<br />
-					While I was still trying to understand web development, I met an
-					amazing person along the way who turned out to be my partner and who
-					was also a senior software engineer.<br />
-
-					I began my transition around the middle of the year 2022. During this
-					time, I watched certified paid courses from udemy and a number of
-					other sources, including MDN, and I also taught myself how to code. It
-					wasn't simple at first, but finally I was able to finish web
-					development, since I kept learning and coding. <br />
-
-					I enjoy leveraging my skills of HTML, CSS, and JavaScript along with
-					modern libraries and frameworks to build and manage responsive
-					websites. <br />
-
-					Dedicated to learning and professional development, eager to use
-					skills on a larger development team, and eager to take on more
-					challenging issues while continuing to look for ways to increase user
-					effectiveness. lastly i enjoy spending my free time making beats.
-
+					The ironic thing is that I lived in Ukraine for more than 13 years. I
+					studied general medicine and surgery but chose against practicing when
+					I realized it wasn't for me. To this day, my knowledge of medicine is
+					still useful, so I have no regrets in that regard. Because of this, I
+					have six years of expertise in sales management in the financial
+					industry, with a focus on blockchain, banking, cryptocurrency, digital
+					marketing, and all areas of sales interests. Before I discovered front
+					end development, at this time. Up until February 24, 2022, when war
+					broke out there, life was wonderful. I had to leave everything I knew
+					behind and flee. I lost so much during this time, It took me a while
+					to start accepting the situation. As I was unable to find any sales
+					employment in Schengen countries that paid higher, I began looking for
+					other ways to increase my income. After doing some research, I learned
+					that I could have been a developer much earlier. I met an
+					extraordinary individual along the way who turned out to be my partner
+					and who was also a senior software engineer while I was still
+					attempting to comprehend web programming. I started my transition in
+					the middle of 2022. I learned how to code at this time by watching
+					accredited paid classes on udemy and through a variety of other
+					websites, including MDN. Though initially challenging, I was
+					eventually able to complete web development thanks to my continued
+					learning and coding. I appreciate using contemporary libraries and
+					frameworks, together with my knowledge of HTML, CSS, and JavaScript,
+					to create and manage responsive websites. dedicated to learning and
+					professional development, keen to put skills to use on a larger
+					development team, willing to take on more difficult problems, and
+					still looking for methods to improve user effectiveness. Finally, I
+					like to spend my leisure time creating beats.
 					<a href="https://janeezy.beatstars.com">Check it out </a>
 				</p>
 			</section>
