--- a/starter/index.html
+++ b/starter/index.html
@@ -149,8 +149,8 @@
 					to create and manage responsive websites. dedicated to learning and
 					professional development, keen to put skills to use on a larger
 					development team, willing to take on more difficult problems, and
-					still looking for methods to improve user effectiveness. Finally, I
-					like to spend my leisure time creating beats.
+					still looking for methods to improve user efficiency. Finally, I like
+					to spend my leisure time creating beats.
 					<a href="https://janeezy.beatstars.com">Check it out </a>
 				</p>
 			</section>
@@ -184,17 +184,17 @@
 
 				<div class="second-set animate__animated animate__pulse">
 					<img
-						src="assets/icons/icons8-bootstrap.svg"
+						src="icons/icons8-bootstrap.svg"
 						alt=""
 						loading="lazy"
 						class="icon icon-card" />
 					<img
-						src="assets/icons/icons8-react-native.svg"
+						src="icons/icons8-react-native.svg"
 						alt=""
 						loading="lazy"
 						class="icon icon-card" />
 					<img
-						src="assets/icons/icons8-git.svg"
+						src="icons/icons8-git.svg"
 						alt=""
 						loading="lazy"
 						class="icon icon-card" />
