--- a/starter/index.html
+++ b/starter/index.html
@@ -40,7 +40,13 @@
 			<!-- navigation section -->
 			<nav>
 				<!-- logo link -->
-				<h1 class="logo1">JD</h1>
+				<a href="index.html">
+					<h1
+						id="h1-tag"
+						class="logo1">
+						JD
+					</h1>
+				</a>
 				<ul class="navigation">
 					<li>
 						<a
@@ -93,11 +99,13 @@
 			<section
 				class="hero"
 				id="about">
-				<img
-					src="images/jane2.png"
-					alt="jane-duru"
-					loading="lazy"
-					class="hero-img" />
+				<a href="index.html">
+					<img
+						src="images/jane2.png"
+						alt="jane-duru"
+						loading="lazy"
+						class="hero-img"
+				/></a>
 				<div class="bio animate__animated animate__shakeX">
 					<h2 class="bio-title">Professional Profile</h2>
 					<p class="bio-text">
@@ -123,17 +131,17 @@
 			<section class="more-about">
 				<h2>More About Me</h2>
 				<p>
-					The ironic thing is that I lived in Ukraine for more than 13 years. I
+					The ironic thing is that I lived in Ukraine for than 13 years. I
 					studied general medicine and surgery but chose against practicing when
 					I realized it wasn't for me. To this day, my knowledge of medicine is
 					still useful, so I have no regrets in that regard. Because of this, I
 					have six years of expertise in sales management in the financial
 					industry, with a focus on blockchain, banking, cryptocurrency, digital
-					marketing, and all areas of sales interests. Before I discovered front
-					end development, at this time. Up until February 24, 2022, when war
-					broke out there, life was wonderful. I had to leave everything I knew
+					marketing, and all areas of sales interests before i discovered front
+					end development. At this time life was wonderful up until February 24,
+					2022, when war broke out in Ukraine,i had to leave everything I knew
 					behind and flee. I lost so much during this time, It took me a while
-					to start accepting the situation. As I was unable to find any sales
+					to start accepting the situation, as I was unable to find any sales
 					employment in Schengen countries that paid higher, I began looking for
 					other ways to increase my income. After doing some research, I learned
 					that I could have been a developer much earlier. I met an
