--- a/My profile Starter/starter/index.html
+++ b/My profile Starter/starter/index.html
@@ -40,7 +40,13 @@
 			<!-- navigation section -->
 			<nav>
 				<!-- logo link -->
-				<h1 class="logo1">JD</h1>
+				<a href="index.html">
+					<h1
+						id="h1-tag"
+						class="logo1">
+						JD
+					</h1>
+				</a>
 				<ul class="navigation">
 					<li>
 						<a
@@ -93,11 +99,13 @@
 			<section
 				class="hero"
 				id="about">
-				<img
-					src="images/jane2.png"
-					alt="jane-duru"
-					loading="lazy"
-					class="hero-img" />
+				<a href="index.html">
+					<img
+						src="images/img3.png"
+						alt="jane-duru"
+						loading="lazy"
+						class="hero-img"
+				/></a>
 				<div class="bio animate__animated animate__shakeX">
 					<h2 class="bio-title">Professional Profile</h2>
 					<p class="bio-text">
@@ -123,34 +131,33 @@
 			<section class="more-about">
 				<h2>More About Me</h2>
 				<p>
-					The ironic thing is that I lived in Ukraine for more than 13 years. I
-					studied general medicine and surgery but chose against practicing when
-					I realized it wasn't for me. To this day, my knowledge of medicine is
-					still useful, so I have no regrets in that regard. Because of this, I
-					have six years of expertise in sales management in the financial
-					industry, with a focus on blockchain, banking, cryptocurrency, digital
-					marketing, and all areas of sales interests. Before I discovered front
-					end development, at this time. Up until February 24, 2022, when war
-					broke out there, life was wonderful. I had to leave everything I knew
-					behind and flee. I lost so much during this time, It took me a while
-					to start accepting the situation. As I was unable to find any sales
-					employment in Schengen countries that paid higher, I began looking for
-					other ways to increase my income. After doing some research, I learned
-					that I could have been a developer much earlier. I met an
-					extraordinary individual along the way who turned out to be my partner
-					and who was also a senior software engineer while I was still
-					attempting to comprehend web programming. I started my transition in
-					the middle of 2022. I learned how to code at this time by watching
-					accredited paid classes on udemy and through a variety of other
-					websites, including MDN. Though initially challenging, I was
-					eventually able to complete web development thanks to my continued
-					learning and coding. I appreciate using contemporary libraries and
-					frameworks, together with my knowledge of HTML, CSS, and JavaScript,
-					to create and manage responsive websites. dedicated to learning and
-					professional development, keen to put skills to use on a larger
-					development team, willing to take on more difficult problems, and
-					still looking for methods to improve user efficiency. Finally, I like
-					to spend my leisure time creating beats.
+					I studied general surgery and medicine when I lived in Ukraine for
+					more than 13 years, but I decided against practice when I realized
+					that it was not for me. I do not regret it because my medical
+					understanding is still valuable today. As a result, I have six years
+					of sales management experience in the financial sector. Before I
+					learned about front-end development, I was particularly interested in
+					blockchain, banking, cryptocurrencies, digital marketing, and all
+					other areas of sales. Everything was great then, but on February 24,
+					2022, when the war broke out in Ukraine, I had to leave everything I
+					knew behind. I suffered so many losses during that time, it took me
+					some time to come to terms with the circumstances, and since I could
+					not find better-paying sales jobs in the Schengen countries, I started
+					looking for alternative ways to increase my income. After some
+					research, I found that I could have become a developer much earlier. I
+					was still trying to understand web programming, when i met an
+					extraordinary person along the way who eventually became my partner
+					and was also an experienced software developer. My transition began in
+					mid-2022, during which time I took accredited, paid courses on udemy
+					and a number of other sites, including MDN, to learn how to program.
+					Although it was difficult at first, I eventually managed to finish web
+					development thanks to my continuous learning and programming. I make
+					it a point to use current libraries and frameworks to create and
+					maintain responsive websites along with my HTML, CSS, and JavaScript
+					skills. I'm committed to learning and growing professionally, want to
+					apply my skills to a larger development team, am willing to take on
+					more challenging tasks, and am still looking for ways to increase user
+					efficiency. Lastly, I enjoy making beats in my spare time.
 					<a href="https://janeezy.beatstars.com">Check it out </a>
 				</p>
 			</section>
@@ -223,7 +230,6 @@
 						<h3 class="project-title">Uhost</h3>
 						<p class="project-details">
 							uhost is a hosting website, where users can choose a data plan!
-							<br />
 							was created styled with html, css and javascript to make it more
 							responsive.
 							<a
