--- a/starter/index.html
+++ b/starter/index.html
@@ -101,7 +101,7 @@
 				id="about">
 				<a href="index.html">
 					<img
-						src="images/img3.png"
+						src="images/jane2.png"
 						alt="jane-duru"
 						loading="lazy"
 						class="hero-img"
